--- a/tic-tac-toe/styles.css
+++ b/tic-tac-toe/styles.css
@@ -11,8 +11,11 @@ div.game-play-box{
   border: 2px solid rgba(0,0,0,0.8);
   background: yellow;
   opacity: 0.6;
+  font-size: 140px;
+  vertical-align: center;
+  padding: 10px 0px;
 }
-
+               
 div.row{
   display: flex;
   flex: 1;
