Added code functionality to highlight matched boxes that match a sequence

--- a/tic-tac-toe/styles.css
+++ b/tic-tac-toe/styles.css
@@ -20,3 +20,8 @@ div.row{
   display: flex;
   flex: 1;
 }
+
+.matched-box{
+  border:6px dashed steelblue !important;
+}	  
+                       
